@@ -36,7 +36,8 @@ public abstract class UpdatingCollection<C> {
         } else if (blockReads) {
             throw new IllegalStateException("Data too stale, read failed!");
         } else if (updateService.state() != Service.State.RUNNING) {
-            final String msg = "Attempted to read updating collection backed by non-running update service. State: '%s'".formatted(
+            final String msg = String.format(
+                    "Attempted to read updating collection backed by non-running update service. State: '%s'",
                     updateService.state());
             throw new IllegalStateException(msg);
         }
